--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     </p>    
     <h2>没案</h2>
     <p> </p>
-    <img src="img/draft1.png" alt="案1">
-    <img src="img/draft2.png" alt="案2">
-    <img src="img/draft3.png" alt="案3">
+    <img src="img/draft1.PNG" alt="案1">
+    <img src="img/draft2.PNG" alt="案2">
+    <img src="img/draft3.PNG" alt="案3">
    
     <video src="img/金魚１.mp4" autoplay loop muted playsinline class="bg-video"></video>
     <div class="lavender-overlay"></div>
