--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
         </style>
     </head>
 <body>
-    <h1 style="background-color: rgba(255, 255, 255, 1);">コンピューターリテラシー名刺作り<h1>
+    <h1 style="background-color: rgba(255, 255, 255, 1);">コンピューターリテラシー名刺作り</h1>
     <h2 style="background-color: rgba(255, 255, 255, 1);">自己紹介</h2>
     <p style="background-color: rgba(255, 255, 255, 1);">
         誕生日：６月１日<br>
         好きなたべもの：ハンバーグ、インドカレー<br>
         飼ってた生き物：祭りの金魚<br>
-        最近興味あること：localAIでパソコン内の作業を効率化すること。</p><p><br><br><br> <br><br><br><br><br><br><br>       
-    </p>    
+        最近興味あること：localAIでパソコン内の作業を効率化すること。</p>
+    <p style="margin-bottom: 10em;"></p>
+
     <h2>没案</h2>
     <p> </p>
     <img src="img/draft1.PNG" alt="案1">
