--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
            left: 0;
            width: 100vw;
            height: 100vh;
-           background-color: rgba(230, 200, 255, 0.3); /* ←ラベンダー */
-           z-index: -0.5; /* 動画より上・他要素より下 */
-           pointer-events: none; /* クリックを邪魔しない！ */
+           background-color: rgba(230, 200, 255, 0.3); 
+           z-index: -0.5; 
+           pointer-events: none; 
            }
 
 
